@@ -1,0 +1,4 @@
+transport code is getting there. we are still loosing material somewhere. 
+this is a start anyway. pattern looks suspicously symmetric....
+
+isostasy is not handled at all right now. needs some more thinking.
