@@ -23,7 +23,7 @@ sliding_law = 0
 vertical_integration = 1
 
 [time]
-tend = 50000.
+tend = 300000.
 dt = 5.
 ntem = 1.
 nvel = 1.
@@ -36,14 +36,16 @@ basal_tract_const = 1.e-3
 
 [Erosion]
 
+[Transport]
+
 [CF default]
 title: erosion
 comment: simple erosion
 
 [CF output]
-name: erosion1.nc
+name: er-transport1.nc
 frequency: 1000
-variables: thk bmlt temp uvel vvel bwat topg erate erosion
+variables: thk bmlt temp uvel vvel bwat topg erate erosion seds1 seds2 seds3
 
 [CF input]
 name: topo.nc
