@@ -39,16 +39,16 @@ basal_tract_const = 1.e-3
 
 [isostasy]
 
-[default]
+[CF default]
 title: erosion
 comment: simple erosion, with llfa
 
-[output]
+[CF output]
 name: erosion2.nc
 frequency: 1000
 variables: thk bmlt temp uvel vvel bwat topg erate erosion slc relx
 
-[input]
+[CF input]
 name: topo.nc
 time: 1
 
