@@ -40,16 +40,16 @@ basal_tract_const = 1.e-3
 [isostasy]
 lithosphere = 1
 
-[default]
+[CF default]
 title: erosion
 comment: simple erosion, with elfa
 
-[output]
+[CF output]
 name: erosion3.nc
 frequency: 1000
 variables: thk bmlt temp uvel vvel bwat topg erate erosion slc relx
 
-[input]
+[CF input]
 name: topo.nc
 time: 1
 
