@@ -41,16 +41,16 @@ basal_tract_const = 1.e-3
 lithosphere = 1
 asthenosphere = 1
 
-[default]
+[CF default]
 title: erosion
 comment: simple erosion, with elra
 
-[output]
+[CF output]
 name: erosion4.nc
 frequency: 1000
 variables: thk bmlt temp uvel vvel bwat topg erate erosion slc relx
 
-[input]
+[CF input]
 name: topo.nc
 time: 1
 
