@@ -53,26 +53,26 @@ asthenosphere = 1
 
 [Erosion]
 
-[default]
+[CF default]
 title: std, increased sliding, cony with simple erosion
 institution: University of Edinburgh
 references: see PhD Magnus Hagdorn
 
-[output]
+[CF output]
 name: fenscan.nc
 frequency: 500
 variables: thk topg eus bmlt slc btemp bwat btrc ubas vbas thkmask acab erate erosion relx
 
-[output]
+[CF output]
 name: fenscan.2000a.nc
 frequency: 2000
 variables: thk temp topg eus uvel vvel wvel
 
-[output]
+[CF output]
 name: fenscan.10000a.nc
 frequency: 7000
 variables: hot
 
-[input]
+[CF input]
 name: europe.20km.nc
 
